I added a third line...

--- a/DUPProjectFile/DUPProjectFile/Views/Home/Index.cshtml
+++ b/DUPProjectFile/DUPProjectFile/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="jumbotron">
     <h1>DUP Search Home Page</h1>
     <h2>This is a second line</h2>
-    
+    <h2>This is a third line</h2>
 </div>
